json the spider

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div data-role="page" id="pageone">
   <div class="ui-header ui-bar-inherit" data-role="header" role="banner">
-    <h1><a href="www.ecjtu.net"><img src="http://wx.ecjtu.net/wmkj/image/logo_icon.png" alt="^_^"/><font color="#000">新生专题</font></a></h1>
+    <h1><a href="www.ecjtu.net"><img src="http://wx.ecjtu.net/wmkj/image/logo_icon.png" alt="^_^"/><font color="#000">日新新闻</font></a></h1>
     <a role="button" data-role="button" href="#" class=" ui-nodisc-icon ui-alt-icon ui-btn-left ui-btn ui-icon-bars ui-btn-icon-notext" >Menu</a>
   </div>
 
@@ -31,7 +31,7 @@
 
 <div data-role="page" id="pagetwo">
   <div data-role="header">
-    <h1>欢迎访问我的主页</h1>
+    <h1><img src="http://wx.ecjtu.net/wmkj/image/logo_icon.png" alt="^_^"> 日新新闻</h1>
   </div>
 
   <div data-role="content">
