--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 
   <div data-role="content">
   	<div class="ui-corner-all">
-    <p>Welcome!</p>
-    <a href="#pagetwo">转到页面二</a>
+  		<ul class="news" data-role="listview">
+  			
+  		</ul>
+   	 	<p>Welcome!</p>
+    	<a href="#pagetwo">转到页面二</a>
     </div>
   </div>
   
